Adiciona bordas arrendodadas nos botões e hover

--- a/Projeto Cronômetro/style.css
+++ b/Projeto Cronômetro/style.css
@@ -36,4 +36,10 @@ button {
   width: 180px;
   margin: 10px;
   border-radius: 5px;
+  transition: all 0.4s ease-in-out;
+}
+
+button:hover {
+  background-color: #ffc222;
+  color:black;
 }
